Edit description in index

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         AOS.init({ once: true, offset: 100, duration: 800 });
 
         const textElement = document.getElementById('typing-text');
-        const phrases = ['Fullstack Developer', 'IS Student at UMN', '.NET Enthusiast', 'Tech Learner'];
+        const phrases = ['Fullstack Developer', 'Student at UMN', '.NET Enthusiast', 'Tech Learner'];
         let phraseIndex = 0;
         let charIndex = 0;
         let isDeleting = false;
