Add project files and download buttons to academic page

--- a/academic.html
+++ b/academic.html
@@ -93,76 +93,82 @@
         <div class="row g-4">
             <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="card shadow-sm project-card h-100">
-                    <div class="card-body p-4">
+                    <div class="card-body p-4 d-flex flex-column">
                         <div class="d-flex justify-content-between mb-3">
                             <span class="badge bg-primary project-badge">Sistem Informasi</span>
                             <small class="text-muted">2024</small>
                         </div>
                         <h5 class="fw-bold">Rancangan Sistem E-Commerce (B2B & C2C)</h5>
-                        <p class="text-secondary small">Mencakup analisis kebutuhan, pemetaan proses bisnis, perancangan database (ERD), serta pembuatan prototype UI/UX dan dokumentasi teknis (use case).</p>
-                        <div class="mt-3">
+                        <p class="text-secondary small flex-grow-1">Mencakup analisis kebutuhan, pemetaan proses bisnis, perancangan database (ERD), serta pembuatan prototype UI/UX.</p>
+                        <div class="mb-3">
                             <span class="badge bg-light text-dark border">ERD</span>
                             <span class="badge bg-light text-dark border">Figma</span>
-                            <span class="badge bg-light text-dark border">Technical Doc</span>
                         </div>
+                        <a href="dokumen-ecommerce.pdf" target="_blank" class="btn btn-outline-primary btn-sm w-100">
+                            <i class="bi bi-file-earmark-pdf me-1"></i> Lihat Dokumen Proyek
+                        </a>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
                 <div class="card shadow-sm project-card h-100">
-                    <div class="card-body p-4">
+                    <div class="card-body p-4 d-flex flex-column">
                         <div class="d-flex justify-content-between mb-3">
                             <span class="badge bg-success project-badge">Web Development</span>
                             <small class="text-muted">2024</small>
                         </div>
                         <h5 class="fw-bold">Aplikasi SI-PERMAI Kab. Tangerang</h5>
-                        <p class="text-secondary small">Membangun aplikasi web untuk akses informasi publik di Kabupaten Tangerang. Berhasil meningkatkan efisiensi akses informasi sebesar 25-40%.</p>
-                        <div class="mt-3">
+                        <p class="text-secondary small flex-grow-1">Membangun aplikasi web untuk akses informasi publik. Berhasil meningkatkan efisiensi akses informasi sebesar 25-40%.</p>
+                        <div class="mb-3">
                             <span class="badge bg-light text-dark border">Web Based</span>
-                            <span class="badge bg-light text-dark border">Public Service</span>
                         </div>
+                        <a href="laporan-sipermai.pdf" target="_blank" class="btn btn-outline-primary btn-sm w-100">
+                            <i class="bi bi-file-earmark-text me-1"></i> Lihat Laporan
+                        </a>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
                 <div class="card shadow-sm project-card h-100">
-                    <div class="card-body p-4">
+                    <div class="card-body p-4 d-flex flex-column">
                         <div class="d-flex justify-content-between mb-3">
                             <span class="badge bg-info project-badge">Data Analysis</span>
                             <small class="text-muted">2024</small>
                         </div>
                         <h5 class="fw-bold">Analisis Fasilitas Pendidikan Indonesia</h5>
-                        <p class="text-secondary small">Visualisasi data menggunakan Tableau untuk menganalisis kesenjangan fasilitas pendidikan antar provinsi melalui 8 grafik interaktif.</p>
-                        <div class="mt-3">
+                        <p class="text-secondary small flex-grow-1">Visualisasi data menggunakan Tableau untuk menganalisis kesenjangan fasilitas pendidikan antar provinsi.</p>
+                        <div class="mb-3">
                             <span class="badge bg-light text-dark border">Tableau</span>
-                            <span class="badge bg-light text-dark border">Data Viz</span>
                         </div>
+                        <a href="https://public.tableau.com/your-profile-link" target="_blank" class="btn btn-outline-primary btn-sm w-100">
+                            <i class="bi bi-bar-chart-fill me-1"></i> Buka Dashboard Tableau
+                        </a>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-6" data-aos="fade-up" data-aos-delay="400">
                 <div class="card shadow-sm project-card h-100">
-                    <div class="card-body p-4">
+                    <div class="card-body p-4 d-flex flex-column">
                         <div class="d-flex justify-content-between mb-3">
                             <span class="badge bg-warning text-dark project-badge">Machine Learning</span>
                             <small class="text-muted">2024</small>
                         </div>
                         <h5 class="fw-bold">Prediksi Harga Saham Tesla</h5>
-                        <p class="text-secondary small">Implementasi model prediksi harga saham dengan membandingkan metode Random Forest dan Regresi untuk akurasi tren pasar.</p>
-                        <div class="mt-3">
+                        <p class="text-secondary small flex-grow-1">Implementasi model prediksi harga saham dengan membandingkan metode Random Forest dan Regresi untuk akurasi tren pasar[cite: 52].</p>
+                        <div class="mb-3">
                             <span class="badge bg-light text-dark border">Python</span>
                             <span class="badge bg-light text-dark border">Random Forest</span>
                         </div>
+                        <a href="notebook-saham.pdf" target="_blank" class="btn btn-outline-primary btn-sm w-100">
+                            <i class="bi bi-code-square me-1"></i> Lihat Kode/Notebook
+                        </a>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-
-    <footer class="text-center text-muted py-4 border-top">
+        </div> </div> <footer class="text-center text-muted py-4 border-top">
         <small>&copy; 2026 Enrico Felix. Built with Bootstrap 5.</small>
     </footer>
 
