Edit non academic page with organization timeline and responsive badge

--- a/non-academic.html
+++ b/non-academic.html
@@ -23,7 +23,7 @@
 
         /* Timeline Styling */
         .org-timeline { border-left: 3px solid #0d6efd; padding-left: 30px; position: relative; }
-        .org-item { margin-bottom: 40px; position: relative; }
+        .org-item { margin-bottom: 30px; position: relative; }
         .org-item::before { 
             content: ''; 
             width: 16px; height: 16px; 
@@ -59,55 +59,56 @@
         <div class="row mb-5" data-aos="fade-up">
             <div class="col-12">
                 <h2 class="fw-bold text-primary">Pengalaman Organisasi & Kepanitiaan</h2>
-                <p class="text-secondary">Kontribusi aktif saya dalam membangun komunitas dan menyukseskan berbagai acara di lingkungan kampus.</p>
+                <p class="text-secondary">Riwayat kontribusi aktif dalam berbagai organisasi dan kepanitiaan di lingkungan Universitas Multimedia Nusantara.</p>
             </div>
         </div>
 
-        <div class="org-timeline" data-aos="fade-up">
+        <div class="org-timeline">
             
-            <div class="org-item">
+            <div class="org-item" data-aos="fade-left">
                 <div class="card shadow-sm border-0">
                     <div class="card-body p-4">
-                        <div class="d-flex justify-content-between align-items-start mb-2">
+                        <div class="d-flex justify-content-between flex-wrap gap-2 mb-2">
                             <h5 class="fw-bold mb-0">Person In Charge (PIC) - OMB UMN 2024</h5>
                             <span class="badge bg-primary">Mar 2024 - Sep 2024</span>
                         </div>
-                        <p class="text-secondary small mb-3">Mempersiapkan mahasiswa baru untuk mengenal lingkungan kampus serta membentuk karakter yang berintegritas.</p>
-                        <ul class="text-secondary small">
-                            <li>Berkoordinasi dengan anggota divisi untuk memastikan alur acara berjalan sesuai rencana.</li>
-                            <li>Menangani kendala lapangan dan menjadi jembatan informasi bagi mahasiswa baru.</li>
+                        <p class="text-secondary small">Mempersiapkan mahasiswa baru untuk mengenal lingkungan kampus, dunia perkuliahan, serta membentuk karakter yang berintegritas.</p>
+                        <ul class="text-secondary small mb-0">
+                            <li>Berpartisipasi aktif dalam koordinasi divisi Person In Charge.</li>
+                            <li>Berkoordinasi dengan anggota divisi untuk memastikan kelancaran alur acara bagi mahasiswa baru.</li>
                         </ul>
                     </div>
                 </div>
             </div>
 
-            <div class="org-item">
+            <div class="org-item" data-aos="fade-left">
                 <div class="card shadow-sm border-0">
                     <div class="card-body p-4">
-                        <div class="d-flex justify-content-between align-items-start mb-2">
+                        <div class="d-flex justify-content-between flex-wrap gap-2 mb-2">
                             <h5 class="fw-bold mb-0">Anggota Divisi - UMN Medical Center</h5>
                             <span class="badge bg-primary">Nov 2023 - Sekarang</span>
                         </div>
-                        <p class="text-secondary small mb-3">Organisasi kesehatan kampus yang melayani kebutuhan medis darurat dan edukasi kesehatan bagi mahasiswa.</p>
-                        <ul class="text-secondary small">
-                            <li>Bertanggung jawab dalam pelayanan kesehatan dasar di lingkungan kampus.</li>
-                            <li>Aktif dalam kegiatan sosial dan program kerja divisi medis.</li>
+                        <p class="text-secondary small">Unit kegiatan mahasiswa yang berfokus pada pelayanan kesehatan dan penanganan medis darurat di kampus.</p>
+                        <ul class="text-secondary small mb-0">
+                            <li>Bertanggung jawab dalam memberikan pelayanan kesehatan dasar.</li>
+                            <li>Mengikuti pelatihan medis berkala untuk meningkatkan kesiapsiagaan tim.</li>
                         </ul>
                     </div>
                 </div>
             </div>
 
-            <div class="org-item">
+            <div class="org-item" data-aos="fade-left">
                 <div class="card shadow-sm border-0">
                     <div class="card-body p-4">
-                        <div class="d-flex justify-content-between align-items-start mb-2">
+                        <div class="d-flex justify-content-between flex-wrap gap-2 mb-2">
                             <h5 class="fw-bold mb-0">Keamanan & Perlengkapan - ALIVE 11.0</h5>
                             <span class="badge bg-primary">Feb 2024 - Jun 2024</span>
                         </div>
-                        <p class="text-secondary small mb-3">Acara tahunan yang melibatkan ratusan partisipan.</p>
-                        <ul class="text-secondary small">
-                            <li>Mengorganisir 10 anggota divisi untuk memastikan keamanan dan ketersediaan ruangan.</li>
-                            <li>Menyukseskan acara dengan total 121 partisipan aktif.</li>
+                        <p class="text-secondary small">Acara tahunan kampus dengan fokus pada pengembangan diri dan komunitas.</p>
+                        <ul class="text-secondary small mb-0">
+                            <li>Menyiapkan segala kebutuhan logistik (barang dan ruangan) untuk operasional acara.</li>
+                            <li>Mengorganisir 10 anggota divisi keamanan untuk memastikan acara berjalan kondusif.</li>
+                            <li>Menyukseskan acara yang dihadiri oleh 121 partisipan.</li>
                         </ul>
                     </div>
                 </div>
@@ -115,13 +116,25 @@
 
         </div>
 
-        <div class="mt-5" data-aos="fade-up">
-            <h4 class="fw-bold mb-4 text-primary"><i class="bi bi-people-fill me-2"></i>Pengabdian Masyarakat</h4>
-            <div class="card shadow-sm border-0 p-4">
-                <h6 class="fw-bold">Edukasi Intoleransi Media Sosial - SMA Kolese Gonzaga</h6>
-                <p class="text-secondary small mb-0">
-                    Melaksanakan program edukasi untuk ±32 siswa mengenai bahaya dan pengaruh intoleransi di media sosial sebagai bagian dari proyek mata kuliah Civics (2025).
-                </p>
+        <div class="mt-5">
+            <h4 class="fw-bold mb-4 text-primary" data-aos="fade-right"><i class="bi bi-star-fill me-2"></i>Kegiatan Sosial & Proyek Tambahan</h4>
+            
+            <div class="row g-4">
+                <div class="col-md-6" data-aos="zoom-in">
+                    <div class="card shadow-sm border-0 h-100 p-4">
+                        <h6 class="fw-bold text-primary">Pengabdian Masyarakat (Civics)</h6>
+                        <p class="text-secondary small mb-2"><strong>SMA Kolese Gonzaga</strong> | 2025</p>
+                        <p class="text-secondary small mb-0">Melaksanakan program edukasi mengenai "Pengaruh Intoleransi di Media Sosial" yang melibatkan ±32 siswa untuk membangun kesadaran digital yang sehat.</p>
+                    </div>
+                </div>
+
+                <div class="col-md-6" data-aos="zoom-in">
+                    <div class="card shadow-sm border-0 h-100 p-4">
+                        <h6 class="fw-bold text-primary">Proposal Aplikasi Pencegah Salah Jurusan</h6>
+                        <p class="text-secondary small mb-2"><strong>Proyek Validasi</strong> | 2024</p>
+                        <p class="text-secondary small mb-0">Mengembangkan rancangan aplikasi yang divalidasi melalui survei langsung kepada 30-50 mahasiswa untuk memetakan masalah pemilihan jurusan kuliah.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
