--- a/non-academic.html
+++ b/non-academic.html
@@ -86,7 +86,7 @@
                     <div class="card-body p-4">
                         <div class="d-flex justify-content-between flex-wrap gap-2 mb-2">
                             <h5 class="fw-bold mb-0">Anggota Divisi - UMN Medical Center</h5>
-                            <span class="badge bg-primary">Nov 2023 - Sekarang</span>
+                            <span class="badge bg-primary">Nov 2023 - Dec 2025</span>
                         </div>
                         <p class="text-secondary small">Unit kegiatan mahasiswa yang berfokus pada pelayanan kesehatan dan penanganan medis darurat di kampus.</p>
                         <ul class="text-secondary small mb-0">
