--- a/profile.html
+++ b/profile.html
@@ -72,7 +72,7 @@
                             <a href="mailto:enrico.khosalim@gmail.com" class="btn btn-outline-primary btn-sm">
                                 <i class="bi bi-envelope me-1"></i> Hubungi Saya
                             </a>
-                            <a href="Enrico Felix Khosalim_CV.pdf" download class="btn btn-dark btn-sm">
+                            <a href="Document/Enrico Felix Khosalim_CV.pdf" download class="btn btn-dark btn-sm">
                                 <i class="bi bi-file-earmark-pdf me-1"></i> Download CV
                             </a>
                         </div>
