Update file project at academic page

--- a/academic.html
+++ b/academic.html
@@ -104,7 +104,7 @@
                             <span class="badge bg-light text-dark border">ERD</span>
                             <span class="badge bg-light text-dark border">Figma</span>
                         </div>
-                        <a href="dokumen-ecommerce.pdf" target="_blank" class="btn btn-outline-primary btn-sm w-100">
+                        <a href="Document/dokumen-ecommerce.pdf" target="_blank" class="btn btn-outline-primary btn-sm w-100">
                             <i class="bi bi-file-earmark-pdf me-1"></i> Lihat Dokumen Proyek
                         </a>
                     </div>
@@ -123,7 +123,7 @@
                         <div class="mb-3">
                             <span class="badge bg-light text-dark border">Web Based</span>
                         </div>
-                        <a href="laporan-sipermai.pdf" target="_blank" class="btn btn-outline-primary btn-sm w-100">
+                        <a href="Document/sipermai.pdf" target="_blank" class="btn btn-outline-primary btn-sm w-100">
                             <i class="bi bi-file-earmark-text me-1"></i> Lihat Laporan
                         </a>
                     </div>
@@ -142,7 +142,7 @@
                         <div class="mb-3">
                             <span class="badge bg-light text-dark border">Tableau</span>
                         </div>
-                        <a href="https://public.tableau.com/your-profile-link" target="_blank" class="btn btn-outline-primary btn-sm w-100">
+                        <a href="Document/project-data-visualization.twbx" target="_blank" class="btn btn-outline-primary btn-sm w-100">
                             <i class="bi bi-bar-chart-fill me-1"></i> Buka Dashboard Tableau
                         </a>
                     </div>
@@ -162,7 +162,7 @@
                             <span class="badge bg-light text-dark border">Python</span>
                             <span class="badge bg-light text-dark border">Random Forest</span>
                         </div>
-                        <a href="notebook-saham.pdf" target="_blank" class="btn btn-outline-primary btn-sm w-100">
+                        <a href="Document/data-analysis-project.pdf" target="_blank" class="btn btn-outline-primary btn-sm w-100">
                             <i class="bi bi-code-square me-1"></i> Lihat Kode/Notebook
                         </a>
                     </div>
